[gd_scene load_steps=7 format=3 uid="uid://6c272b6v2uhe"]

[ext_resource type="Texture2D" uid="uid://c7h5ps8rykv0s" path="res://croppedBass.png" id="1_o4ta5"]
[ext_resource type="Texture2D" uid="uid://dkspx3bvxoe61" path="res://Screenshot 2024-04-18 124556.png" id="2_vcxc7"]
[ext_resource type="AudioStream" uid="uid://dtta34ukj67w8" path="res://audio/E2.wav" id="3_rc1be"]
[ext_resource type="Script" path="res://Control.gd" id="3_s4s6t"]
[ext_resource type="AudioStream" uid="uid://gf224ryu6hcj" path="res://audio/E1.wav" id="4_5dcr2"]
[ext_resource type="AudioStream" uid="uid://ltv5m1rnjbvk" path="res://audio/E3.wav" id="4_yw5p5"]

[node name="Node2D" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_s4s6t")

[node name="AudioStreamPlayer1" type="AudioStreamPlayer" parent="Control"]
process_mode = 1
stream = ExtResource("4_5dcr2")

[node name="Button1" type="Button" parent="Control"]
layout_mode = 0
offset_left = 37.0
offset_top = 602.0
offset_right = 76.0
offset_bottom = 645.0

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("3_rc1be")

[node name="Button2" type="Button" parent="Control"]
layout_mode = 0
offset_left = 135.0
offset_top = 602.0
offset_right = 174.0
offset_bottom = 644.0

[node name="Button3" type="Button" parent="Control"]
layout_mode = 0
offset_left = 231.0
offset_top = 603.0
offset_right = 269.0
offset_bottom = 646.0

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="Control"]
process_mode = 1
stream = ExtResource("4_yw5p5")
mix_target = 1

[node name="Node" type="Node" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="Node"]

[node name="Screenshot2024-04-18124556" type="Sprite2D" parent="Node"]
z_index = -1
position = Vector2(582, 257.5)
scale = Vector2(1.16064, 1.11325)
texture = ExtResource("2_vcxc7")

[node name="CroppedBass" type="Sprite2D" parent="Node"]
position = Vector2(579, 555)
scale = Vector2(0.80904, 0.930693)
texture = ExtResource("1_o4ta5")

[connection signal="pressed" from="Control/Button1" to="Control" method="_on_button_1_pressed"]
[connection signal="pressed" from="Control/Button2" to="Control" method="_on_button_2_pressed"]
[connection signal="pressed" from="Control/Button3" to="Control" method="_on_button_3_pressed"]
