extends Control

func _on_button_1_pressed():
	$AudioStreamPlayer1.play()
	
func _on_button_2_pressed():
	$AudioStreamPlayer2.play()
	
func _on_button_3_pressed():
	$AudioStreamPlayer3.play()
	
func _on_button_4_pressed():
	$AudioStreamPlayer4.play()
	
func _on_button_5_pressed():
	$AudioStreamPlayer5.play()
	
func _on_button_6_pressed():
	$AudioStreamPlayer6.play()
	
func _on_button_7_pressed():
	$AudioStreamPlayer7.play()
	
func _on_button_8_pressed():
	$AudioStreamPlayer8.play()
	
func _on_button_9_pressed():
	$AudioStreamPlayer9.play()
	
func _on_button_10_pressed():
	$AudioStreamPlayer10.play()
	
func _on_button_11_pressed():
	$AudioStreamPlayer11.play()
	
func _on_button_12_pressed():
	$AudioStreamPlayer12.play()
	
func _on_button_13_pressed():
	$AudioStreamPlayer13.play()
	
func _on_button_14_pressed():
	$AudioStreamPlayer14.play()
	
func _on_button_15_pressed():
	$AudioStreamPlayer15.play()
	
func _on_button_16_pressed():
	$AudioStreamPlayer16.play()
	
func _on_button_17_pressed():
	$AudioStreamPlayer17.play()
	
func _on_button_18_pressed():
	$AudioStreamPlayer18.play()
	
func _on_button_19_pressed():
	$AudioStreamPlayer19.play()
	
func _on_button_20_pressed():
	$AudioStreamPlayer20.play()
	
func _on_button_21_pressed():
	$AudioStreamPlayer21.play()
	
func _on_button_22_pressed():
	$AudioStreamPlayer22.play()
	
func _on_button_23_pressed():
	$AudioStreamPlayer23.play()
	
func _on_button_24_pressed():
	$AudioStreamPlayer24.play()
	
func _on_button_25_pressed():
	$AudioStreamPlayer25.play()
	
func _on_button_26_pressed():
	$AudioStreamPlayer26.play()
	
func _on_button_27_pressed():
	$AudioStreamPlayer27.play()
	
func _on_button_28_pressed():
	$AudioStreamPlayer28.play()
	
func _on_button_29_pressed():
	$AudioStreamPlayer29.play()
	
func _on_button_30_pressed():
	$AudioStreamPlayer30.play()
	
func _on_button_31_pressed():
	$AudioStreamPlayer31.play()
	
func _on_button_32_pressed():
	$AudioStreamPlayer32.play()
	
func _on_button_33_pressed():
	$AudioStreamPlayer33.play()
	
func _on_button_34_pressed():
	$AudioStreamPlayer34.play()
	
func _on_button_35_pressed():
	$AudioStreamPlayer35.play()
	
func _on_button_36_pressed():
	$AudioStreamPlayer36.play()
	
func _on_button_37_pressed():
	$AudioStreamPlayer37.play()
	
func _on_button_38_pressed():
	$AudioStreamPlayer38.play()
	
func _on_button_39_pressed():
	$AudioStreamPlayer39.play()
	
func _on_button_40_pressed():
	$AudioStreamPlayer40.play()
	
func _on_button_41_pressed():
	$AudioStreamPlayer41.play()
	
func _on_button_42_pressed():
	$AudioStreamPlayer42.play()
	
func _on_button_43_pressed():
	$AudioStreamPlayer43.play()
	
func _on_button_44_pressed():
	$AudioStreamPlayer44.play()
	
func _on_button_45_pressed():
	$AudioStreamPlayer45.play()
	
func _on_button_46_pressed():
	$AudioStreamPlayer46.play()
	
func _on_button_47_pressed():
	$AudioStreamPlayer47.play()
	
func _on_button_48_pressed():
	$AudioStreamPlayer48.play()
